--- a/NC4/Two Pointers.ipynb
+++ b/NC4/Two Pointers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c16833fc-04e0-4e5b-8167-598459ca68af",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "0a274dd6-d223-4b4b-8fb9-02a8e6da0bc9",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "dcbd7334-59f5-4d2e-b404-6eedc5d13adc",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "77a2f4a5-dd32-4f53-af05-552cfcf7b54b",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
        "[[-1, 0, 1], [2, -1, -1]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +97,7 @@
     "            else:\n",
     "                zeros += 1\n",
     "\n",
-    "        res = set()\n",
+    "        res = []\n",
     "        if zeros:\n",
     "            for n in pos:\n",
     "                if -n in neg:\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "e4273ea8-f3c9-4c6a-8c9d-b486bf6bab25",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "36"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,6 +200,54 @@
     "\n",
     "Solution().trap([4,2,0,3,2,5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "691e3dc8-79f9-4584-a7b0-7bebf43f6dcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 1, 2, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "\n",
+    "    def dailyTemperatures(self, temperatures: List[int]) -> List[int]:\n",
+    "\n",
+    "        res = [0] * len(temperatures)\n",
+    "        stack = []\n",
+    "\n",
+    "        for i, t in enumerate(temperatures):\n",
+    "\n",
+    "            while stack and t > stack[-1][0]:\n",
+    "                \n",
+    "                stackT, stackIdx = stack.pop()\n",
+    "                res[stackIdx] = i - stackIdx\n",
+    "\n",
+    "            stack.append([t, i])\n",
+    "        \n",
+    "        return res\n",
+    "\n",
+    "temps = [30,38,30,36,35,40,28]\n",
+    "Solution().dailyTemperatures(temps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b70b4f3-a07c-4b33-b382-e582224a3040",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
