--- a/NC4/Buffer.ipynb
+++ b/NC4/Buffer.ipynb
@@ -158,6 +158,64 @@
     "\n",
     "Solution().trap()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7795c225-2677-4d6a-91ca-b90ea99dec8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bb6abfe5-cdbf-4fdb-a84e-488a7ef25f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    \n",
+    "    def longestConsecutive(self, nums: List[int]) -> int:\n",
+    "\n",
+    "        elements = set(nums)\n",
+    "        visited = set()\n",
+    "        maxl = 0\n",
+    "\n",
+    "        for num in nums:\n",
+    "\n",
+    "            if num not in  visited and num-1 not in elements:\n",
+    "\n",
+    "                i = 1\n",
+    "                while num+i in elements:\n",
+    "                    i += 1\n",
+    "\n",
+    "            maxl = max(maxl, i)\n",
+    "        return maxl\n",
+    "\n",
+    "Solution().longestConsecutive([0,3,7,2,5,8,4,6,0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9df0ccf8-f0b1-4506-a73d-2da8b8a030a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
