--- a/NC4/Arrays and Hashing.ipynb
+++ b/NC4/Arrays and Hashing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "417498d5-f660-487e-85bf-99cb7b2122ac",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "80df2225-3e1a-42b1-83f4-7726ef995d40",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "1f83d5ff-f998-4cc5-aeea-ca705079e54b",
    "metadata": {},
    "outputs": [],
@@ -65,30 +65,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "5801c7ee-a96b-4918-965e-a7d2f8611559",
+   "execution_count": 1,
+   "id": "8cb08513-8558-4416-a554-e03b11f5d806",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1,2 ,3,4]\n",
-    "ones = nums.count(1)\n"
+    "\n",
+    "## 2414. Length of the Longest Alphabetical Continuous Substring\n",
+    "\n",
+    "class Solution:\n",
+    "    \n",
+    "    def longestContinuousSubstring(self, s: str) -> int:\n",
+    "\n",
+    "        ordinals = [ord(c) for c in s]\n",
+    "        ordinals_sub = [ordinals[i] - ordinals[i-1] \\\n",
+    "                        for i in range(1, len(ordinals))]\n",
+    "\n",
+    "        maxl = 0\n",
+    "        \n",
+    "        i = 0\n",
+    "        while i < len(ordinals_sub):\n",
+    "\n",
+    "            current = 0\n",
+    "            while i < len(ordinals_sub) and ordinals_sub[i] == 1:\n",
+    "                current += 1\n",
+    "                i += 1\n",
+    "\n",
+    "            if current:\n",
+    "                maxl = max(maxl, current)\n",
+    "            else:\n",
+    "                i += 1\n",
+    "\n",
+    "        return maxl+1\n",
+    "\n",
+    "\n",
+    "Solution().longestContinuousSubstring(\"abacaba\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372755e8-150e-4588-94d8-bb1b47e4bd12",
+   "id": "5633eb02-bbf7-48ae-9e27-2f71244f8acb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -96,9 +124,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "llms",
    "language": "python",
-   "name": "python3"
+   "name": "llms"
   },
   "language_info": {
    "codemirror_mode": {
