top interview qns

--- a/NC4/Graphs.ipynb
+++ b/NC4/Graphs.ipynb
@@ -3,250 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0122f83b-48f6-41a8-a351-a914d5cecd6c",
+   "id": "a85e7ee2-77ee-44d1-ba36-76c629891079",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List, Optional"
+    "from typing import List"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e14c33e1-6ce3-417c-8c4a-72c3a1232513",
+   "cell_type": "markdown",
+   "id": "10b493f2-bd25-47bb-b50f-4c17958b2dc5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "## Number of Islands\n",
-    "\n",
-    "class Solution:\n",
-    "\n",
-    "    def numIslands(self, grid: List[List[str]]) -> int:\n",
-    "\n",
-    "        rows, cols = len(grid), len(grid[0])\n",
-    "        visited = set()\n",
-    "\n",
-    "        def dfs(r, c):\n",
-    "\n",
-    "            if r < 0 or c < 0 or r >= rows or c >= cols or (r, c) in visited or grid[r][c] == '0':\n",
-    "                return\n",
-    "            visited.add((r, c))\n",
-    "            nei = [(-1, 0), (0, -1), (1, 0), (0, 1)]\n",
-    "\n",
-    "            for dr, dc in nei:\n",
-    "                dfs(r+dr, c+dc)\n",
-    "\n",
-    "\n",
-    "        islands = 0\n",
-    "        for r in range(rows):\n",
-    "            for c in range(cols):\n",
-    "                if grid[r][c] == \"1\" and (r,c) not in visited:\n",
-    "                    dfs(r,c)\n",
-    "                    islands+=1\n",
-    "        return islands                \n",
-    "\n",
-    "grid = [\n",
-    "    [\"1\",\"1\",\"0\",\"0\",\"1\"],\n",
-    "    [\"1\",\"1\",\"0\",\"0\",\"1\"],\n",
-    "    [\"0\",\"0\",\"1\",\"0\",\"0\"],\n",
-    "    [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
-    "  ]\n",
-    "\n",
-    "\n",
-    "\n",
-    "Solution().numIslands(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cad930d9-b2b0-4de6-8586-d046c8e8c74b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Solution:\n",
-    "    \n",
-    "    def maxAreaOfIsland(self, grid: List[List[int]]) -> int:\n",
-    "\n",
-    "        rows, cols = len(grid), len(grid[0])\n",
-    "        visited = set()\n",
-    "        area = 0\n",
-    "\n",
-    "        def dfs(r, c):\n",
-    "\n",
-    "            nonlocal area\n",
-    "\n",
-    "            if r < 0 or c < 0 or r >= rows or c >= cols or (r, c) in visited or grid[r][c] == 0:\n",
-    "                return\n",
-    "\n",
-    "            area += 1\n",
-    "            visited.add((r, c))\n",
-    "            nei = [(-1, 0), (0, -1), (1, 0), (0, 1)]\n",
-    "\n",
-    "            for dr, dc in nei:\n",
-    "                dfs(r+dr, c+dc)\n",
-    "\n",
-    "\n",
-    "        maxarea = 0\n",
-    "        for r in range(rows):\n",
-    "            for c in range(cols):\n",
-    "                if grid[r][c] == 1 and (r,c) not in visited:\n",
-    "                    area = 0\n",
-    "                    dfs(r, c)\n",
-    "                    maxarea = max(area, maxarea)\n",
-    "                    \n",
-    "        return maxarea\n",
-    "\n",
-    "grid = [\n",
-    "  [0,1,1,0,1],\n",
-    "  [1,0,1,0,1],\n",
-    "  [0,1,1,0,1],\n",
-    "  [0,1,0,0,1]\n",
-    "]\n",
-    "Solution().maxAreaOfIsland(grid)"
+    "## Number of islands\n",
+    "----"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9930aa66-8142-483c-a7c9-2718e4a1d7c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Node:\n",
-    "    \n",
-    "    def __init__(self, val = 0, neighbors = None):\n",
-    "        self.val = val\n",
-    "        self.neighbors = neighbors if neighbors is not None else []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b3278fdf-8bd6-43e1-ab01-7ee836f3a1ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "# Definition for a Node.\n",
-    "class Node:\n",
-    "    def __init__(self, val = 0, neighbors = None):\n",
-    "        self.val = val\n",
-    "        self.neighbors = neighbors if neighbors is not None else []\n",
-    "\"\"\"\n",
-    "\n",
-    "class Solution:\n",
-    "    def cloneGraph(self, node: Optional['Node']) -> Optional['Node']:\n",
-    "        \n",
-    "        copy_graph = {}\n",
-    "\n",
-    "        def dfs(node):\n",
-    "\n",
-    "            if node in copy_graph:\n",
-    "                return copy_graph[node]\n",
-    "\n",
-    "            clone = Node(node.val)\n",
-    "            copy_graph[node] = clone\n",
-    "            \n",
-    "            for nei in node.neighbors:\n",
-    "                clone.neighbors.append(dfs(nei))\n",
-    "            \n",
-    "            return clone\n",
-    "        \n",
-    "\n",
-    "        return dfs(node) if node else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e7baa472-a3f2-4cb6-89e6-1d8d792d9a35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[3, -1, 0, 1], [2, 2, 1, -1], [1, -1, 2, -1], [0, -1, 3, 4]]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from collections import deque\n",
-    "class Solution:\n",
-    "    \n",
-    "    def islandsAndTreasure(self, grid: List[List[int]]) -> None:\n",
-    "\n",
-    "        rows, cols = len(grid), len(grid[0])\n",
-    "\n",
-    "        visited = set()\n",
-    "        q = deque()\n",
-    "\n",
-    "        for r in range(rows):\n",
-    "            for c in range(cols):\n",
-    "                if grid[r][c] == 0:\n",
-    "                    q.append((r, c))\n",
-    "                    visited.add((r, c))\n",
-    "\n",
-    "\n",
-    "        def add(r, c):\n",
-    "            if r < 0 or c < 0  or r >= rows or c >= cols or (r,c)  in visited or grid[r][c] == -1:\n",
-    "                return\n",
-    "            q.append((r,c))\n",
-    "            visited.add((r, c))\n",
-    "\n",
-    "        distance = 0\n",
-    "        while q:\n",
-    "            for i in range(len(q)):\n",
-    "                (r, c) = q.popleft()\n",
-    "                grid[r][c] = distance\n",
-    "\n",
-    "                add(r-1, c)\n",
-    "                add(r+1, c)\n",
-    "                add(r, c-1)\n",
-    "                add(r, c+1)\n",
-    "            distance+=1\n",
-    "\n",
-    "grid = [\n",
-    "  [2147483647,-1,0,2147483647],\n",
-    "  [2147483647,2147483647,2147483647,-1],\n",
-    "  [2147483647,-1,2147483647,-1],\n",
-    "  [0,-1,2147483647,2147483647]\n",
-    "]\n",
-    "\n",
-    "Solution().islandsAndTreasure(grid)\n",
-    "grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "62bf134e-d93a-4743-bbd8-0ed158946be8",
+   "id": "62855164-934d-4fd4-a754-f6988ab9bd1c",
    "metadata": {},
    "outputs": [
     {
@@ -255,282 +31,54 @@
        "4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rotting Oranges\n",
-    "\n",
-    "from collections import deque\n",
-    "\n",
     "class Solution:\n",
-    "    \n",
-    "    def orangesRotting(self, grid: List[List[int]]) -> int:\n",
+    "\n",
+    "    def numIslands(self, grid: List[List[str]]) -> int:\n",
     "\n",
     "        rows, cols = len(grid), len(grid[0])\n",
     "\n",
-    "        fresh = 0\n",
-    "        rotten = deque()\n",
-    "\n",
-    "        for r in range(rows):\n",
-    "            for c in range(cols):\n",
-    "                if grid[r][c] == 1:\n",
-    "                    fresh += 1\n",
-    "                elif grid[r][c] == 2:\n",
-    "                    rotten.append((r, c))\n",
-    "\n",
-    "\n",
-    "\n",
-    "        time = 0\n",
-    "        while rotten and fresh:\n",
-    "            \n",
-    "            for i in range(len(rotten)):\n",
-    "\n",
-    "                (r, c) = rotten.popleft()\n",
-    "                for dr, dc in [(-1, 0), (0, -1), (1, 0), (0, 1)]:\n",
-    "                    _r, _c = r+dr, c+dc\n",
-    "                    if _r < 0 or _c < 0 or _r >= rows or _c >= cols or grid[_r][_c] != 1:\n",
-    "                        continue\n",
-    "                        \n",
-    "                    rotten.append((_r, _c))\n",
-    "                    grid[_r][_c] = 2\n",
-    "                    fresh -= 1\n",
-    "\n",
-    "            time += 1\n",
-    "\n",
-    "            \n",
-    "        return time if not fresh else -1\n",
-    "\n",
-    "\n",
-    "grid = [[1,1,0],[0,1,1],[0,1,2]]\n",
-    "Solution().orangesRotting(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "68fc5f42-17e5-46fa-80fb-d1000aa8381c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Pacific Atlantic \n",
-    "\n",
-    "class Solution:\n",
-    "    \n",
-    "    def pacificAtlantic(self, grid: List[List[int]]) -> List[List[int]]:\n",
-    "\n",
-    "        rows, cols = len(grid), len(grid[0])\n",
-    "\n",
-    "        pac, atl = set(), set()\n",
-    "\n",
-    "        def dfs(r, c, visited, prev_height):\n",
-    "\n",
-    "            if r < 0 or c < 0 or r >= rows or c >= cols or (r, c) in visited or grid[r][c] < prev_height:\n",
-    "                return\n",
-    "            visited.add((r, c))\n",
-    "            for dr, dc in [(-1, 0), (0, -1), (1, 0), (0, 1)]:\n",
-    "                dfs(r+dr, c+dc, visited, grid[r][c])\n",
-    "                \n",
-    "\n",
-    "        \n",
-    "        for r in range(rows):\n",
-    "            dfs(r, 0, pac, grid[r][0])\n",
-    "            dfs(r, cols-1, atl, grid[r][cols-1])\n",
-    "\n",
-    "        for c in range(cols):\n",
-    "            dfs(0, c, pac, grid[0][c])\n",
-    "            dfs(rows-1, c, atl, grid[rows-1][c])\n",
-    "\n",
-    "        res = []\n",
-    "        for r in range(rows):\n",
-    "            for c in range(cols):\n",
-    "                if (r, c) in pac and (r, c) in atl:\n",
-    "                    res.append([r, c])\n",
-    "\n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "efc66509-893d-4dbb-a9ce-287d15ce535d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "class Solution:\n",
-    "    \n",
-    "    def solve(self, board: List[List[str]]) -> None:\n",
-    "\n",
-    "        rows, cols = len(board), len(board[0])\n",
-    "        border_os = set()\n",
-    "        \n",
-    "        for r in range(rows):\n",
-    "            if board[r][0] == 'O':\n",
-    "                border_os.add((r, 0))\n",
-    "            if board[r][cols-1] == 'O':\n",
-    "                border_os.add((r, cols-1))\n",
-    "\n",
-    "        for c in range(cols):\n",
-    "            if board[0][c] == 'O':\n",
-    "                border_os.add((0, c))\n",
-    "            if board[rows-1][c] == 'O':\n",
-    "                border_os.add((rows-1, c))\n",
-    "\n",
-    "        do_not_change = set()\n",
-    "\n",
+    "        visited = set()\n",
     "        def dfs(r, c):\n",
     "\n",
-    "            if r < 0 or c < 0 or r >= rows or c >= cols or board[r][c] != 'O' or (r, c) in do_not_change:\n",
+    "            if r < 0 or r >= rows or c < 0 or c >= cols or (r, c) in visited or grid[r][c] == \"0\":\n",
     "                return\n",
-    "            do_not_change.add((r, c))\n",
-    "            for dr, dc in [(-1, 0), (0, -1), (1, 0), (0, 1)]:\n",
-    "                dfs(r+dr, \n",
-    "                    c+dc)\n",
+    "                \n",
+    "            visited.add((r, c))\n",
+    "            nei = [(-1, 0), (1, 0), (0, -1), (0, 1)]\n",
+    "            for dr, dc in nei:\n",
+    "                _r, _c = r+dr, c+dc\n",
+    "                dfs(_r, _c)\n",
     "\n",
-    "        for r, c in border_os:\n",
-    "            dfs(r, c)\n",
-    "\n",
+    "        islands = 0\n",
     "        for r in range(rows):\n",
     "            for c in range(cols):\n",
-    "                if board[r][c] == 'O' and (r, c) not in border_os and (r, c) not in do_not_change:\n",
-    "                    board[r][c] = 'X'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "cbce8141-d1e4-403f-8e96-6e3ce12b2313",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class Solution:\n",
-    "\n",
-    "    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:\n",
-    "\n",
-    "        pre_req = {i:[] for i in range(numCourses)}\n",
+    "                if (r, c) not in visited and grid[r][c] == \"1\":\n",
+    "                    islands += 1\n",
+    "                    dfs(r, c)\n",
     "        \n",
-    "        for crs, pre in prerequisites:\n",
-    "            pre_req[crs].append(pre)\n",
-    "\n",
-    "        visit = set()\n",
-    "        def dfs(crs):\n",
-    "\n",
-    "            if crs in visit:\n",
-    "                return False\n",
-    "\n",
-    "            visit.add(crs)\n",
-    "            for c in pre_req[crs]:\n",
-    "                if not dfs(c):\n",
-    "                    return False\n",
-    "\n",
-    "            visit.remove(crs)\n",
-    "            pre_req[crs] = []\n",
-    "            return True\n",
-    "\n",
-    "        for crs in range(numCourses):\n",
-    "            if not dfs(crs):\n",
-    "                return False\n",
-    "\n",
-    "        return True\n",
+    "        return islands\n",
     "\n",
     "\n",
-    "numCourses = 2\n",
-    "prerequisites = [[0,1]]\n",
-    "Solution().canFinish(numCourses, prerequisites)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "2e8e4317-e35a-446f-8840-46da033038c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    \n",
-    "    def findOrder(self, numCourses: int, prerequisites: List[List[int]]) -> List[int]:\n",
-    "\n",
-    "        pre_req = {i:[] for i in range(numCourses)}        \n",
-    "        for crs, pre in prerequisites:\n",
-    "            pre_req[crs].append(pre)\n",
-    "\n",
-    "        res = []\n",
-    "        cycle = set()\n",
-    "        visited = set()\n",
-    "        def dfs(crs):\n",
-    "\n",
-    "            if crs in cycle: return False\n",
-    "            if crs in visited: return True\n",
-    "\n",
-    "            cycle.add(crs)\n",
-    "            for c in pre_req[crs]:\n",
-    "                if not dfs(c): \n",
-    "                    return False\n",
-    "\n",
-    "            cycle.remove(crs)\n",
-    "            res.append(crs)\n",
-    "            visited.add(crs) \n",
-    "            return res\n",
-    "\n",
-    "        for crs in range(numCourses):\n",
-    "            if crs not in res:\n",
-    "                if not dfs(crs): return []\n",
-    "\n",
-    "        return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "7def498c-17bf-47bd-b2e2-d377d4f17470",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Valid Tree \n",
-    "from collections import defaultdict\n",
-    "\n",
-    "class Solution:\n",
-    "\n",
-    "    def validTree(self, n: int, edges: List[List[int]]) -> bool:\n",
-    "\n",
-    "        adjList = defaultdict(list)\n",
-    "        for n1, n2 in edges:\n",
-    "            adjList[n1].append(n2)\n",
-    "            adjList[n2].append(n1)\n",
-    "\n",
-    "        visit = set()\n",
-    "        def dfs(node, prev):\n",
-    "\n",
-    "            if node in visit:\n",
-    "                return False\n",
-    "            visit.add(node)\n",
-    "            for nei in adjList[node]:\n",
-    "                if nei != prev and not dfs(nei, node):\n",
-    "                    return False\n",
-    "            return True\n",
-    "\n",
-    "        return dfs(0, -1) and len(visit) == n"
+    "grid = grid = [\n",
+    "    [\"1\",\"1\",\"0\",\"0\",\"1\"],\n",
+    "    [\"1\",\"1\",\"0\",\"0\",\"1\"],\n",
+    "    [\"0\",\"0\",\"1\",\"0\",\"0\"],\n",
+    "    [\"0\",\"0\",\"0\",\"1\",\"1\"]\n",
+    "  ]\n",
+    "Solution().numIslands(grid)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2043b361-1df8-4616-a612-ea96b3bc032b",
+   "id": "7f0bc62c-b12f-4c9b-b550-bb1552224729",
    "metadata": {},
    "outputs": [],
    "source": []
