--- a/FIS/algorithms/Untitled.ipynb
+++ b/FIS/algorithms/Untitled.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "lat=39.099724\n",
     "lon=-94.578331\n",
-    "appid=\"ac4ccde462f5c23c19c8b32f75b59d8c\"\n",
+    "appid=\"\"\n",
     "\n",
     "url = f\"https://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={appid}\"\n",
     "headers = {\n",
