update classification code

--- a/FIS/analysis/03 Classification - Adult.ipynb
+++ b/FIS/analysis/03 Classification - Adult.ipynb
@@ -960,7 +960,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
+   "id": "5b9794b1-7b6a-440f-81a8-3528952579b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_score = 0\n",
+    "best_pipeline = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9742ec65-f984-4590-a5ba-a2444fa4a86f",
    "metadata": {},
    "outputs": [
@@ -968,21 +979,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Estimator: {Pipeline(steps=[('preprocessor',\n",
-      "                 ColumnTransformer(transformers=[('ohe',\n",
-      "                                                  OneHotEncoder(handle_unknown='ignore',\n",
-      "                                                                sparse_output=False),\n",
-      "                                                  ['workclass', 'education',\n",
-      "                                                   'marital-status',\n",
-      "                                                   'occupation', 'relationship',\n",
-      "                                                   'race', 'sex',\n",
-      "                                                   'native-country']),\n",
-      "                                                 ('scaler', StandardScaler(),\n",
-      "                                                  Index(['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss',\n",
-      "       'hours-per-week'],\n",
-      "      dtype='object'))])),\n",
-      "                ('classifier', RandomForestClassifier(max_depth=25))])}\n",
-      "Best Score: {0.6752068139993139}\n"
+      "Best Score: {0.674326401424665}\n",
+      "Test Score: 0.6802721088435374\n"
      ]
     },
     {
@@ -991,36 +989,6 @@
      "text": [
       "/Users/sreejithsreekumar/venvs/llms/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Estimator: {Pipeline(steps=[('preprocessor',\n",
-      "                 ColumnTransformer(transformers=[('ohe',\n",
-      "                                                  OneHotEncoder(handle_unknown='ignore',\n",
-      "                                                                sparse_output=False),\n",
-      "                                                  ['workclass', 'education',\n",
-      "                                                   'marital-status',\n",
-      "                                                   'occupation', 'relationship',\n",
-      "                                                   'race', 'sex',\n",
-      "                                                   'native-country']),\n",
-      "                                                 ('scaler', StandardScaler(),\n",
-      "                                                  Index(['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss',\n",
-      "       'hours-per-week'],\n",
-      "      dtype...\n",
-      "                               feature_types=None, gamma=None, grow_policy=None,\n",
-      "                               importance_type=None,\n",
-      "                               interaction_constraints=None, learning_rate=None,\n",
-      "                               max_bin=None, max_cat_threshold=None,\n",
-      "                               max_cat_to_onehot=None, max_delta_step=None,\n",
-      "                               max_depth=15, max_leaves=None,\n",
-      "                               min_child_weight=None, missing=nan,\n",
-      "                               monotone_constraints=None, multi_strategy=None,\n",
-      "                               n_estimators=20, n_jobs=None,\n",
-      "                               num_parallel_tree=None, random_state=None, ...))])}\n",
-      "Best Score: {0.6963171984238732}\n"
      ]
     }
    ],
@@ -1066,21 +1034,19 @@
     "        param_grid=params,\n",
     "        cv=5,\n",
     "        scoring='f1',\n",
-    "        error_score='raise',\n",
     "        n_jobs=-1\n",
     "    )\n",
     "\n",
     "    grid.fit(X_train, y_train)\n",
     "\n",
-    "    print(f\"Best Estimator:\", {grid.best_estimator_})\n",
     "    print(f\"Best Score:\", {grid.best_score_})\n",
     "\n",
     "\n",
-    "    val_score = f1(y_val, grid.best_estimator_.predict(X_val))\n",
+    "    val_score = f1_score(y_val, grid.best_estimator_.predict(X_val))\n",
     "    print(f\"Test Score: {val_score}\")\n",
     "    \n",
-    "    if val_score > best_recall:\n",
-    "        best_recall = val_score\n",
+    "    if val_score > best_score:\n",
+    "        best_score = val_score\n",
     "        best_pipeline = grid.best_estimator_\n"
    ]
   },
@@ -1091,7 +1057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1(y_test, best_pipeline.predict(X_test))"
+    "f1_score(y_test, best_pipeline.predict(X_test))"
    ]
   }
  ],
