classification and regression notebooks

--- a/FIS/analysis/03 Classification - Adult.ipynb
+++ b/FIS/analysis/03 Classification - Adult.ipynb
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "9742ec65-f984-4590-a5ba-a2444fa4a86f",
    "metadata": {},
    "outputs": [
@@ -989,6 +989,14 @@
      "text": [
       "/Users/sreejithsreekumar/venvs/llms/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
       "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: {0.6963171984238732}\n",
+      "Test Score: 0.7045895281189399\n"
      ]
     }
    ],
@@ -1018,9 +1026,6 @@
     "    }\n",
     "\n",
     "]\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "for model, params in zip(models, model_params):\n",
     "\n",
@@ -1052,13 +1057,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d43df9c5-f8a5-4bf4-958b-05a69ff86d74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6982651796778191"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "f1_score(y_test, best_pipeline.predict(X_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f38226a2-1bef-4fd7-aec8-1102c809b6db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
