update analysis notebooks

--- a/FIS/analysis/01 Classification - Diabetes.ipynb
+++ b/FIS/analysis/01 Classification - Diabetes.ipynb
@@ -61,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/gh/tdqdcp611d5c7yv0b0np772c0000gn/T/ipykernel_8140/1918366593.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/gh/tdqdcp611d5c7yv0b0np772c0000gn/T/ipykernel_63447/1918366593.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -451,7 +451,7 @@
       "                                                 ('cat', OneHotEncoder(),\n",
       "                                                  Index([], dtype='object'))])),\n",
       "                ('classifier', LogisticRegression(C=0.1, solver='liblinear'))])\n",
-      "Train Score: 0.9755796446853356\n",
+      "Train Score: 0.9779885576633545\n",
       "Test Score: 1.0\n"
      ]
     },
@@ -630,9 +630,9 @@
       "                                                 ('cat', OneHotEncoder(),\n",
       "                                                  Index([], dtype='object'))])),\n",
       "                ('classifier',\n",
-      "                 RandomForestClassifier(max_depth=9, n_estimators=10))])\n",
-      "Train Score: 0.9584462511291779\n",
-      "Test Score: 1.0\n",
+      "                 RandomForestClassifier(max_depth=9, n_estimators=15))])\n",
+      "Train Score: 0.9682324601023788\n",
+      "Test Score: 0.9565217391304348\n",
       "Best Pipeline : Pipeline(steps=[('preprocessor',\n",
       "                 ColumnTransformer(transformers=[('num', StandardScaler(),\n",
       "                                                  Index(['radius1', 'texture1', 'perimeter1', 'area1', 'smoothness1',\n",
@@ -645,12 +645,12 @@
       "                               interaction_constraints=None, learning_rate=None,\n",
       "                               max_bin=None, max_cat_threshold=None,\n",
       "                               max_cat_to_onehot=None, max_delta_step=None,\n",
-      "                               max_depth=5, max_leaves=None,\n",
+      "                               max_depth=3, max_leaves=None,\n",
       "                               min_child_weight=None, missing=nan,\n",
       "                               monotone_constraints=None, multi_strategy=None,\n",
       "                               n_estimators=15, n_jobs=None,\n",
       "                               num_parallel_tree=None, random_state=None, ...))])\n",
-      "Train Score: 0.9560373381511592\n",
+      "Train Score: 0.968262571514604\n",
       "Test Score: 0.9782608695652174\n",
       "=================================================\n",
       "Done!\n",
@@ -666,7 +666,7 @@
       "                               interaction_constraints=None, learning_rate=None,\n",
       "                               max_bin=None, max_cat_threshold=None,\n",
       "                               max_cat_to_onehot=None, max_delta_step=None,\n",
-      "                               max_depth=5, max_leaves=None,\n",
+      "                               max_depth=3, max_leaves=None,\n",
       "                               min_child_weight=None, missing=nan,\n",
       "                               monotone_constraints=None, multi_strategy=None,\n",
       "                               n_estimators=15, n_jobs=None,\n",
@@ -710,17 +710,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d8995a1b-e504-4e11-98da-4a2a37289a36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9649122807017544"
+       "0.9210526315789473"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
