--- a/FIS/analysis/02 Classification - Adult.ipynb
+++ b/FIS/analysis/02 Classification - Adult.ipynb
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "5b9794b1-7b6a-440f-81a8-3528952579b7",
    "metadata": {},
    "outputs": [],
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "9742ec65-f984-4590-a5ba-a2444fa4a86f",
    "metadata": {},
    "outputs": [
@@ -979,24 +979,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Score: {0.674326401424665}\n",
-      "Test Score: 0.6802721088435374\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sreejithsreekumar/venvs/llms/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py:752: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Score: {0.6963171984238732}\n",
-      "Test Score: 0.7045895281189399\n"
+      "Best Score: {0.6770468069440746}\n",
+      "Test Score: 0.685222001325381\n",
+      "Best Score: {0.6959850765527186}\n",
+      "Test Score: 0.6889031430404106\n"
      ]
     }
    ],
@@ -1057,17 +1043,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "id": "d43df9c5-f8a5-4bf4-958b-05a69ff86d74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6982651796778191"
+       "0.6985959438377535"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,8 +1064,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "91a35695-7dcb-4637-bcb0-b4b264cb8d48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report, roc_auc_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "f38226a2-1bef-4fd7-aec8-1102c809b6db",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[33], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, \u001b[43my_pred\u001b[49m))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mROC AUC Score: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mroc_auc_score(y_test,\u001b[38;5;250m \u001b[39mclf\u001b[38;5;241m.\u001b[39mpredict_proba(X_test)[:,\u001b[38;5;241m1\u001b[39m])\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))\n",
+    "print(f\"ROC AUC Score: {roc_auc_score(y_test, clf.predict_proba(X_test)[:,1])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12c14c81-275f-41a9-a86d-b892ffdfab5f",
    "metadata": {},
    "outputs": [],
    "source": []
