--- a/FIS/analysis/03 Regression.ipynb
+++ b/FIS/analysis/03 Regression.ipynb
@@ -951,7 +951,7 @@
     "    val_score = mean_absolute_error(grid.best_estimator_.predict(X_val), y_val)\n",
     "    print(f\"Val Score: {val_score}\")\n",
     "    \n",
-    "    if val_score < best_score:\n",
+    "    if val_score > best_score:\n",
     "        best_score = val_score\n",
     "        best_regressor = grid.best_estimator_"
    ]
